# qgadgetEditor

./: CMakeLists.txt  editorqgadget.cpp  editorqgadget.h  main.cpp
elements/: checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  doublespinbox.cpp  doublespinbox.h  ptrformlayout.cpp  ptrformlayout.h  ptrwidget.cpp  ptrwidget.h  qgadgetfactory.cpp  qgadgetfactory.h  spinbox.cpp  spinbox.h
